kubernetes/home/apps/media/lgtv-tbc/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dmz-ipwhitelist
  namespace: media

spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - ${NETWORK_DMZ}
      - ${NETWORK_INFRA}
      - ${NETWORK_USER}
      - ${NETWORK_SERVER}
      - 10.42.0.0/24
      - 10.42.2.0/24
      - 10.42.3.0/24
      - 10.42.4.0/24
      - 10.42.5.0/24
      - 10.42.6.0/24
